Improve transactions